# weather-api

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: master-release.yml
app/: setup.py
app/weather_api/: config.py  main.py
app/weather_api/resources/: system_resources.py
app/weather_api/routes/: system_resources.py
app/weather_api/services/: met_service.py
deployment/: Pulumi.yaml  __main__.py
deployment/argocd/: app.yaml
deployment/kubernetes/: weather-api.yaml
weather_api/: __main__.py  config.py  dependencies.py
weather_api/example_code/curl/: get_forecast.sh  get_sunrise.sh
weather_api/example_code/javascript/: get_forecast.js  get_sunrise.js
weather_api/example_code/python/: get_forecast.py  get_sunrise.py
weather_api/models/met/: sunrise_types.py  weather_types.py
weather_api/openapi/: openapi.py
weather_api/routes/: system_resources.py  weather_routes.py
weather_api/services/: met_service.py
