[tool.poetry]
name = "weather-api"
version = "0.0.1"
description = "API for providing weather information"
authors = ["Kenneth Stigen <kenneth.stigen@knowit.no>"]
readme = "README.md"
packages = [{include = "weather_api", from = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.99.1"
uvicorn = "^0.22.0"
black = "^23.3.0"
py-healthcheck = "^1.10.1"
pydantic = "1.10.11"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.4.0"
pulumi-awsx = "^1.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
