[project]
name = "weather-api"
version = "0.0.1"
description = "API for providing weather information"
authors = [
  {name = "Kenneth Stigen", email = "kenneth.stigen@knowit.no"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.3.0"
py-healthcheck = "^1.10.1"
pydantic = "^2.10.6"
uvicorn = "^0.23.2"
pydantic-settings = "^2.0.3"
httpx = "^0.25.1"
fastapi = "^0.110.1"
prometheus-fastapi-instrumentator = "^7.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.4.0"
datamodel-code-generator = "^0.22.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
